// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid test cases Check Grid callbacks 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-template-columns: repeat(9, auto);
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 1vw;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  width: 1.8vh;
  height: 1.8vh;
  color: transparent;
  background-color: #d1d1d1;
  border: 0.6vh solid transparent;
  border-color: white #9e9e9e #9e9e9e white;
}

.emotion-1:hover {
  -webkit-filter: brightness(1.1);
  filter: brightness(1.1);
}

<div
    class="emotion-0"
    role="grid"
    size="9"
  >
    <div
      class="emotion-1"
      data-testid="0,0"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="0,1"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="0,2"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="0,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="0,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="0,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="0,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="0,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="0,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="1,0"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="1,1"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="1,2"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="1,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="1,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="1,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="1,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="1,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="1,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="2,0"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="2,1"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="2,2"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="2,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="2,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="2,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="2,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="2,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="2,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="3,0"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="3,1"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="3,2"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="3,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="3,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="3,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="3,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="3,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="3,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="4,0"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="4,1"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="4,2"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="4,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="4,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="4,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="4,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="4,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="4,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="5,0"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="5,1"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="5,2"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="5,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="5,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="5,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="5,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="5,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="5,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="6,0"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="6,1"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="6,2"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="6,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="6,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="6,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="6,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="6,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="6,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="7,0"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="7,1"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="7,2"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="7,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="7,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="7,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="7,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="7,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="7,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="8,0"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="8,1"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="8,2"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="8,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="8,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="8,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="8,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="8,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="8,8"
      role="cell"
    >
      10
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid test cases Check Grid callbacks 2`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-template-columns: repeat(9, auto);
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 1vw;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  width: 1.8vh;
  height: 1.8vh;
  color: transparent;
  background-color: #d1d1d1;
  border: 0.6vh solid transparent;
  border-color: white #9e9e9e #9e9e9e white;
  border-color: #dddddd;
  cursor: default;
  color: rgba(0,0,0,0);
}

.emotion-1:hover {
  -webkit-filter: brightness(1.1);
  filter: brightness(1.1);
}

.emotion-1:hover {
  -webkit-filter: brightness(1);
  filter: brightness(1);
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  width: 1.8vh;
  height: 1.8vh;
  color: transparent;
  background-color: #d1d1d1;
  border: 0.6vh solid transparent;
  border-color: white #9e9e9e #9e9e9e white;
  border-color: #dddddd;
  cursor: default;
  color: #2a48ec;
}

.emotion-7:hover {
  -webkit-filter: brightness(1.1);
  filter: brightness(1.1);
}

.emotion-7:hover {
  -webkit-filter: brightness(1);
  filter: brightness(1);
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  width: 1.8vh;
  height: 1.8vh;
  color: transparent;
  background-color: #d1d1d1;
  border: 0.6vh solid transparent;
  border-color: white #9e9e9e #9e9e9e white;
}

.emotion-8:hover {
  -webkit-filter: brightness(1.1);
  filter: brightness(1.1);
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  width: 1.8vh;
  height: 1.8vh;
  color: transparent;
  background-color: #d1d1d1;
  border: 0.6vh solid transparent;
  border-color: white #9e9e9e #9e9e9e white;
  border-color: #dddddd;
  cursor: default;
  color: #2bb13d;
}

.emotion-16:hover {
  -webkit-filter: brightness(1.1);
  filter: brightness(1.1);
}

.emotion-16:hover {
  -webkit-filter: brightness(1);
  filter: brightness(1);
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  width: 1.8vh;
  height: 1.8vh;
  color: transparent;
  background-color: #d1d1d1;
  border: 0.6vh solid transparent;
  border-color: white #9e9e9e #9e9e9e white;
  border-color: #dddddd;
  cursor: default;
  color: #ec6561;
}

.emotion-32:hover {
  -webkit-filter: brightness(1.1);
  filter: brightness(1.1);
}

.emotion-32:hover {
  -webkit-filter: brightness(1);
  filter: brightness(1);
}

<div
    class="emotion-0"
    role="grid"
    size="9"
  >
    <div
      class="emotion-1"
      data-testid="0,0"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="0,1"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="0,2"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="0,3"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="0,4"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="0,5"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-7"
      data-testid="0,6"
      role="cell"
    >
      1
    </div>
    <div
      class="emotion-8"
      data-testid="0,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="0,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="1,0"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="1,1"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="1,2"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="1,3"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-7"
      data-testid="1,4"
      role="cell"
    >
      1
    </div>
    <div
      class="emotion-7"
      data-testid="1,5"
      role="cell"
    >
      1
    </div>
    <div
      class="emotion-16"
      data-testid="1,6"
      role="cell"
    >
      2
    </div>
    <div
      class="emotion-8"
      data-testid="1,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="1,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="2,0"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="2,1"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="2,2"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="2,3"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-7"
      data-testid="2,4"
      role="cell"
    >
      1
    </div>
    <div
      class="emotion-8"
      data-testid="2,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="2,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="2,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="2,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="3,0"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="3,1"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-7"
      data-testid="3,2"
      role="cell"
    >
      1
    </div>
    <div
      class="emotion-7"
      data-testid="3,3"
      role="cell"
    >
      1
    </div>
    <div
      class="emotion-32"
      data-testid="3,4"
      role="cell"
    >
      3
    </div>
    <div
      class="emotion-8"
      data-testid="3,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="3,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="3,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="3,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="4,0"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="4,1"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-7"
      data-testid="4,2"
      role="cell"
    >
      1
    </div>
    <div
      class="emotion-8"
      data-testid="4,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="4,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="4,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="4,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="4,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="4,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-7"
      data-testid="5,0"
      role="cell"
    >
      1
    </div>
    <div
      class="emotion-7"
      data-testid="5,1"
      role="cell"
    >
      1
    </div>
    <div
      class="emotion-16"
      data-testid="5,2"
      role="cell"
    >
      2
    </div>
    <div
      class="emotion-8"
      data-testid="5,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="5,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="5,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="5,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="5,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="5,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="6,0"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="6,1"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="6,2"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="6,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="6,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="6,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="6,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="6,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="6,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="7,0"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="7,1"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="7,2"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="7,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="7,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="7,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="7,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="7,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="7,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="8,0"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="8,1"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="8,2"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="8,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="8,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="8,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="8,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="8,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="8,8"
      role="cell"
    >
      10
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid test cases Check Grid callbacks 3`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-template-columns: repeat(9, auto);
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 1vw;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  width: 1.8vh;
  height: 1.8vh;
  color: transparent;
  background-color: #d1d1d1;
  border: 0.6vh solid transparent;
  border-color: white #9e9e9e #9e9e9e white;
  border-color: #dddddd;
  cursor: default;
  color: rgba(0,0,0,0);
}

.emotion-1:hover {
  -webkit-filter: brightness(1.1);
  filter: brightness(1.1);
}

.emotion-1:hover {
  -webkit-filter: brightness(1);
  filter: brightness(1);
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  width: 1.8vh;
  height: 1.8vh;
  color: transparent;
  background-color: #d1d1d1;
  border: 0.6vh solid transparent;
  border-color: white #9e9e9e #9e9e9e white;
  border-color: #dddddd;
  cursor: default;
  color: #2a48ec;
}

.emotion-7:hover {
  -webkit-filter: brightness(1.1);
  filter: brightness(1.1);
}

.emotion-7:hover {
  -webkit-filter: brightness(1);
  filter: brightness(1);
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  width: 1.8vh;
  height: 1.8vh;
  color: transparent;
  background-color: #d1d1d1;
  border: 0.6vh solid transparent;
  border-color: white #9e9e9e #9e9e9e white;
}

.emotion-8:hover {
  -webkit-filter: brightness(1.1);
  filter: brightness(1.1);
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  width: 1.8vh;
  height: 1.8vh;
  color: transparent;
  background-color: #d1d1d1;
  border: 0.6vh solid transparent;
  border-color: white #9e9e9e #9e9e9e white;
  border-color: #dddddd;
  cursor: default;
  color: #2bb13d;
}

.emotion-16:hover {
  -webkit-filter: brightness(1.1);
  filter: brightness(1.1);
}

.emotion-16:hover {
  -webkit-filter: brightness(1);
  filter: brightness(1);
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  width: 1.8vh;
  height: 1.8vh;
  color: transparent;
  background-color: #d1d1d1;
  border: 0.6vh solid transparent;
  border-color: white #9e9e9e #9e9e9e white;
  border-color: #dddddd;
  cursor: default;
  color: #ec6561;
}

.emotion-32:hover {
  -webkit-filter: brightness(1.1);
  filter: brightness(1.1);
}

.emotion-32:hover {
  -webkit-filter: brightness(1);
  filter: brightness(1);
}

.emotion-82 {
  width: 0px;
  height: 0px;
  color: rgba(0,0,0,0);
  border-top: 0.5vh solid transparent;
  border-bottom: 0.5vh solid transparent;
  border-left: 0.5vh solid #ec433c;
}

<div
    class="emotion-0"
    role="grid"
    size="9"
  >
    <div
      class="emotion-1"
      data-testid="0,0"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="0,1"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="0,2"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="0,3"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="0,4"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="0,5"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-7"
      data-testid="0,6"
      role="cell"
    >
      1
    </div>
    <div
      class="emotion-8"
      data-testid="0,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="0,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="1,0"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="1,1"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="1,2"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="1,3"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-7"
      data-testid="1,4"
      role="cell"
    >
      1
    </div>
    <div
      class="emotion-7"
      data-testid="1,5"
      role="cell"
    >
      1
    </div>
    <div
      class="emotion-16"
      data-testid="1,6"
      role="cell"
    >
      2
    </div>
    <div
      class="emotion-8"
      data-testid="1,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="1,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="2,0"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="2,1"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="2,2"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="2,3"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-7"
      data-testid="2,4"
      role="cell"
    >
      1
    </div>
    <div
      class="emotion-8"
      data-testid="2,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="2,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="2,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="2,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="3,0"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="3,1"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-7"
      data-testid="3,2"
      role="cell"
    >
      1
    </div>
    <div
      class="emotion-7"
      data-testid="3,3"
      role="cell"
    >
      1
    </div>
    <div
      class="emotion-32"
      data-testid="3,4"
      role="cell"
    >
      3
    </div>
    <div
      class="emotion-8"
      data-testid="3,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="3,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="3,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="3,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-1"
      data-testid="4,0"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-1"
      data-testid="4,1"
      role="cell"
    >
      0
    </div>
    <div
      class="emotion-7"
      data-testid="4,2"
      role="cell"
    >
      1
    </div>
    <div
      class="emotion-8"
      data-testid="4,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="4,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="4,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="4,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="4,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="4,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-7"
      data-testid="5,0"
      role="cell"
    >
      1
    </div>
    <div
      class="emotion-7"
      data-testid="5,1"
      role="cell"
    >
      1
    </div>
    <div
      class="emotion-16"
      data-testid="5,2"
      role="cell"
    >
      2
    </div>
    <div
      class="emotion-8"
      data-testid="5,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="5,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="5,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="5,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="5,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="5,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="6,0"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="6,1"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="6,2"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="6,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="6,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="6,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="6,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="6,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="6,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="7,0"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="7,1"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="7,2"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="7,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="7,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="7,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="7,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="7,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="7,8"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="8,0"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="8,1"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="8,2"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="8,3"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="8,4"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="8,5"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="8,6"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="8,7"
      role="cell"
    >
      10
    </div>
    <div
      class="emotion-8"
      data-testid="8,8"
      role="cell"
    >
      <div
        class="emotion-82"
        data-testid="flag_8,8"
      >
        11
      </div>
    </div>
  </div>
</DocumentFragment>
`;
